; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_remote-ext.c_cmd_remote_ext.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_remote-ext.c_cmd_remote_ext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@usage_msg = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cmd_remote_ext(i32 %0, i8** %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 3
  br i1 %8, label %9, label %12

9:                                                ; preds = %3
  %10 = load i32, i32* @usage_msg, align 4
  %11 = call i32 @usage(i32 %10)
  br label %12

12:                                               ; preds = %9, %3
  %13 = load i8**, i8*** %5, align 8
  %14 = getelementptr inbounds i8*, i8** %13, i64 2
  %15 = load i8*, i8** %14, align 8
  %16 = call i32 @command_loop(i8* %15)
  ret i32 %16
}

declare dso_local i32 @usage(i32) #1

declare dso_local i32 @command_loop(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
